# trading_journal_macos

./: .gitignore  Dockerfile.test  FOR_LINUX_TESTER.md  LINUX_APPIMAGE_INSTRUCTIONS.txt  MIGRATION_SYSTEM_IMPLEMENTATION.md  PRE_RELEASE_VERIFICATION.md  README.md  docker-test-build-only.sh  docker-test.sh  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: BUILDS.md
.github/workflows/: release-linux.yml  release.yml
docs/: MIGRATIONS.md  MIGRATION_RECOVERY.md
flatpak/: com.nemesis.TradingJournal.desktop  com.nemesis.TradingJournal.metainfo.xml  com.nemesis.TradingJournal.yml
scripts/: build-release.sh  build-windows.md  reset-database.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  credentials.rs  error.rs  live_mirror.rs  mod.rs  rate_limiter.rs  secure_storage.rs
src-tauri/src/api/bitget/: client.rs  mapper.rs  mod.rs  types.rs  websocket.rs
src-tauri/src/api/blofin/: client.rs  mapper.rs  mod.rs  types.rs
src-tauri/src/commands/: api_sync.rs  import.rs  live_mirror.rs  mod.rs  positions.rs  settings.rs  stats.rs  trades.rs
src-tauri/src/db/: connection.rs  migration_runner.rs  mod.rs  schema.sql
src-tauri/src/db/migrations/: 000_bootstrap.sql  001_initial_schema.sql  002_add_planned_and_effective_entries.sql  003_add_import_source.sql  004_add_auto_sync_columns.sql  005_add_live_mirror_column.sql  007_add_execution_calculations.sql  008_add_feature_flags.sql  009_ensure_execution_columns.sql  mod.rs  template.sql.example
src-tauri/src/models/: api_credential.rs  mod.rs  settings.rs  trade.rs
src-tauri/src/sync/: scheduler.rs
src/components/: AnonymousToggle.tsx  CurrencyDisplay.tsx  DeleteConfirmDialog.tsx  ExchangeCard.tsx  ExchangeDialog.tsx  ImportResultDialog.tsx  PositionMetricsEditor.tsx  PositionMonitor.tsx  SyncDialog.tsx  SyncPreview.tsx  SyncProgress.tsx  TradeActivityCalendar.tsx  circular-progress.tsx  date-range-filter.tsx  onboarding-dialog.tsx  semi-circular-progress.tsx  sidebar.tsx
src/components/charts/: cumulative-pnl-chart.tsx  daily-pnl-chart.tsx
src/contexts/: AnonymousModeContext.tsx
src/i18n/: config.ts
src/i18n/messages/: en.json  fr.json
src/lib/: api.ts  calculations.ts  chartUtils.ts  colors.ts  csv-parser.ts  utils.ts  validations.ts
src/pages/: Calculator.tsx  Dashboard.tsx  Help.tsx  Import.tsx  Journal.tsx  Layout.tsx  OpenOrders.tsx  Settings.tsx  TradeDetail.tsx  TradeNew.tsx
