[package]
name = "trading-journal"
version = "1.1.1"
description = "Nemesis Trading Journal - Cross-platform desktop app for traders"
authors = ["N0mad"]
edition = "2024"

[lib]
name = "trading_journal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
csv = "1.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
keyring = "3.6"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hostname = "0.4"
governor = "0.6"
futures = "0.3"
async-trait = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = false       # Keep symbols for crash reports and debugging
opt-level = 3       # Optimize for performance (standard release optimization)
lto = "thin"        # Thin LTO - faster builds with similar benefits
codegen-units = 16  # Better parallelization for faster builds
